WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
236505
WebGL GPUP OpenGL context is not used even if WebGL via Metal is deselected
https://bugs.webkit.org/show_bug.cgi?id=236505
Summary
WebGL GPUP OpenGL context is not used even if WebGL via Metal is deselected
Kimmo Kinnunen
Reported
2022-02-11 07:13:07 PST
WebGL GPUP OpenGL context is not used even if WebGL via Metal is deselected when useMetal attribute was added, it wasn't added to the serialisation
Attachments
wip
(11.62 KB, patch)
2022-02-13 11:22 PST
,
Kimmo Kinnunen
no flags
Details
Formatted Diff
Diff
Patch
(15.53 KB, patch)
2022-02-14 07:23 PST
,
Kimmo Kinnunen
no flags
Details
Formatted Diff
Diff
Patch
(15.85 KB, patch)
2022-02-28 04:00 PST
,
Kimmo Kinnunen
no flags
Details
Formatted Diff
Diff
Patch
(16.55 KB, patch)
2022-02-28 05:35 PST
,
Kimmo Kinnunen
no flags
Details
Formatted Diff
Diff
Patch
(18.04 KB, patch)
2022-02-28 10:43 PST
,
Kimmo Kinnunen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-02-12 19:47:23 PST
<
rdar://problem/88862936
>
Kimmo Kinnunen
Comment 2
2022-02-13 11:22:37 PST
Created
attachment 451828
[details]
wip
Kimmo Kinnunen
Comment 3
2022-02-14 07:23:51 PST
Created
attachment 451900
[details]
Patch
Kimmo Kinnunen
Comment 4
2022-02-28 04:00:03 PST
Created
attachment 453380
[details]
Patch
Kimmo Kinnunen
Comment 5
2022-02-28 05:35:43 PST
Created
attachment 453385
[details]
Patch
Kimmo Kinnunen
Comment 6
2022-02-28 10:43:17 PST
Created
attachment 453408
[details]
Patch
Myles C. Maxfield
Comment 7
2022-02-28 10:48:15 PST
Comment on
attachment 453408
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=453408&action=review
> Source/WebCore/platform/graphics/GraphicsContextGLAttributes.h:80 > +#if ENABLE(GPU_PROCESS)
Is there harm in leaving these functions in, even if !ENABLE(GPU_PROCESS)? I generally view #ifs as worse than leaving in unused functions.
Kimmo Kinnunen
Comment 8
2022-03-01 05:41:00 PST
> Is there harm in leaving these functions in, even if !ENABLE(GPU_PROCESS)? I generally view #ifs as worse than leaving in unused functions.
I think it's the project style to use the ifdefs? The old code also had the ifdefs, as has other similar code. I'd like if the project moved to style with less ifdefs.
EWS
Comment 9
2022-03-01 06:33:26 PST
Committed
r290643
(
247916@main
): <
https://commits.webkit.org/247916@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 453408
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug