WebGL GPUP OpenGL context is not used even if WebGL via Metal is deselected https://bugs.webkit.org/show_bug.cgi?id=236505

Patch by Kimmo Kinnunen <kkinnunen@apple.com> on 2022-03-01
Reviewed by Myles C. Maxfield.

Source/WebCore:

Encode, decode also `useMetal` property.

Tests: webgl/webgl-via-metal-flag-off.html
       webgl/webgl-via-metal-flag-on.html

* platform/graphics/GraphicsContextGLAttributes.h:
(WebCore::GraphicsContextGLAttributes::encode const):
(WebCore::GraphicsContextGLAttributes::decode):

Source/WebKit:

* Shared/WebCoreArgumentCoders.cpp:
* Shared/WebCoreArgumentCoders.h:

LayoutTests:

* webgl/resources/test-shader-implementation-language.js: Added.
(runTest):
* webgl/webgl-via-metal-flag-off-expected.txt: Added.
* webgl/webgl-via-metal-flag-off.html: Added.
* webgl/webgl-via-metal-flag-on-expected.txt: Added.
* webgl/webgl-via-metal-flag-on.html: Added.


Canonical link: https://commits.webkit.org/247916@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290643 268f45cc-cd09-0410-ab3c-d52691b4dbfc